# design-decisions-mcp

./: .gitignore  .mcp.json  .mcp_linux.json  CLAUDE.md  LICENSE.md  README.md  TODO.md  design_decision_schema.py  main.py  mcp-decisions-llm.py  mcp_decisions_llm.py  mcp_linux.json  pyproject.toml  requirements.txt
.github/scripts/: validate_decisions.py
.github/workflows/: validate_decisions.yml
docs/: decision-record-schema.json  sdd-workflow.md
docs/adr/: ADR-0000-yaml-decision-record-format.yaml  ADR-0001-plugin-friendly-extensible-architecture.yaml
docs/ddr/: DDR-0000-immutable-decision-record-payloads.yaml  DDR-0001-multi-format-support-with-plugin-architecture.yaml
docs/fdr/: FDR-0001.yaml
docs/sdr/: SDR-0001-scoped-discovery-threat-mitigation.yaml
test/: conftest.py  test_cli.py  test_init.py  test_records.py  test_validate.py
