[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_decisions_llm", "design_decision_schema"]

[project]
name = "design-decisions-mcp"
version = "0.1.0"
description = "MCP for JIT Architecture Decision Records"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.27",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.scripts]
design-decisions-mcp = "mcp_decisions_llm:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v --tb=short"
