[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_decisions_llm", "design_decision_schema"]

[project]
name = "design-decisions-mcp"
version = "0.1.0"
description = "MCP for JIT Architecture Decision Records"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eugene Olsen", email = "eugene@olsenfamily.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.27",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/eugeneolsen/design-decisions-mcp"
Repository = "https://github.com/eugeneolsen/design-decisions-mcp.git"
Issues = "https://github.com/eugeneolsen/design-decisions-mcp/issues"
Documentation = "https://github.com/eugeneolsen/design-decisions-mcp#readme"

[project.scripts]
design-decisions-mcp = "mcp_decisions_llm:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v --tb=short"
