[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_decisions_llm", "design_decision_schema"]

[project]
name = "design-decisions-mcp"
version = "0.1.0"
description = "MCP for JIT Architecture Decision Records"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eugene Olsen", email = "eugene@olsenfamily.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.27",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/eugeneolsen/design-decisions-mcp"
Repository = "https://github.com/eugeneolsen/design-decisions-mcp.git"
Issues = "https://github.com/eugeneolsen/design-decisions-mcp/issues"
Documentation = "https://github.com/eugeneolsen/design-decisions-mcp#readme"

[project.scripts]
design-decisions-mcp = "mcp_decisions_llm:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v --tb=short"

[tool.design-decisions-mcp]
# Allowed discovery roots (default: ["docs", "src"])
# Records are only discovered within these directories.
# Set DESIGN_DECISIONS_MCP_ROOTS env var to override (colon-separated, e.g., "docs:src:architecture")
discovery-roots = ["docs", "src"]

# Restrict discovery to git-tracked files only (default: true)
# SECURITY: When enabled (default), only YAML files tracked by git are discovered.
# This closes the threat model by preventing discovery of records in untracked
# directories (e.g., .gitignore'd files, temporary checkouts, or stashed changes).
# Files must pass git tracking to be included, ensuring they went through the repo's
# commit/review process (if branch protection is enforced).
# Set DESIGN_DECISIONS_MCP_GIT_ONLY env var to override (true/false/1/0/yes/no).
# Only disable this in development/testing when validating uncommitted records.
git-tracked-only = true
